Bug 979394 - fix calling Unmap() in GrallocImage r=nical